<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ushare</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="refreshButton">Refresh</string>
    <string name="initialShake"></string>
    <string name="home">Home</string>
    <string name="message">SMS</string>
    <string name="me">Me</string>
    <string name="more">More</string>
    <string name="share">Press to share</string>
    <string name="share_click">Sharing...</string>
    <string name="shake">Shake to find a share</string>
    <string name="message_name">name</string>
    <string name="logoutButton">Logout</string>
    <string name="title_activity_web">Ushare</string>
    <string name="title_activity_message_detail_response">Ushare Response</string>
    <string name="title_activity_message_detail">Ushare Request</string>
    <string name="Ushare_Request">Ushare Request</string>
    <string name="refuse">Refuse</string>
    <string name="Receive">Received:</string>
    <string name="Ushare_Response">Ushare Response</string>
    <string name="title_activity_text_edit">TextEdit</string>
    <string name="title_activity_multi_select">MultiSelect</string>

</resources>
