<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:gravity="center_horizontal"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/tab_background"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >
        
        <TextView
		android:layout_width="wrap_content"
		android:layout_height="40dp"
		android:gravity="center_vertical"
		android:text="Home"
		android:textColor="#000000"
		android:textStyle="bold"
		android:textSize="20sp" />

    </LinearLayout>
    
    <Button
        android:id="@+id/shareButton"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_below="@+id/linearLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:background="@drawable/share"
        android:gravity="bottom|center"
        android:paddingBottom="80dp"
        android:text="@string/share"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />
    
    <ImageView
        android:id="@+id/ShakeImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/shareButton"
        android:layout_marginTop="26dp"
        android:src="@drawable/shake" />

    
    <TextView
        android:id="@+id/myAwesomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:text="@string/initialShake" 
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ShakeImage"
        android:layout_centerHorizontal="true"
        android:text="@string/shake"
        android:textColor="#778087" />
   
</RelativeLayout>